tests/error/type_match/if_expr_no_else.bz
// error: expected ';'
// suggestion: add ';' here:
// error: variable type 'void' is not instantiable
function test(b: bool)
{
	let _ = if (b) {
		0
	};
}
